--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "slugify": "^1.6.6",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
