--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "dayjs": "^1.11.10",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "slugify": "^1.6.6",
     "superjson": "^2.2.1",
