--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@supabase/supabase-js": "^2.39.7",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@types/mime-types": "^2.1.4",
+    "@types/validator": "^13.11.9",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.10",
+    "mime-types": "^2.1.35",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
@@ -34,6 +39,7 @@
     "react-icons": "^5.0.1",
     "slugify": "^1.6.6",
     "superjson": "^2.2.1",
+    "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
